# CareerCraftsAI

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CNAME  CareerCraft AI.md  JobAgent_AI_PRD.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  landing_page.html  locustfile.py  package-lock.json
.kiro/: test
backend/: Dockerfile  constraints.txt  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: auto_apply_pipeline.py  company_research_agent.py  cover_letter_agent.py  email_agent.py  email_monitor_agent.py  followup_agent.py  harness.py  interview_coach_agent.py  interview_prep_agent.py  job_search.py  linkedin_agent.py  nl_search_agent.py  orchestrator.py  resume_agent.py  salary_agent.py  state.py  strategies.py  thinking.py
backend/app/api/: internal.py
backend/app/core/: config.py  database.py  event_bus.py  llm_gateway.py  model_router.py  rate_limit.py  security.py  supabase_auth.py  sync_db.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/services/: ats_service.py  auto_apply_service.py  browser_control_service.py  email_finder_service.py  exa_service.py  form_filler_service.py  gmail_service.py  hunter_service.py  indian_platforms_service.py  job_platforms_service.py  linkedin_automation_service.py  linkedin_outreach_service.py  llm_proxy_service.py  pdf_service.py  persona_service.py  pinchtab_service.py  proxycurl_service.py  (+6 more)
backend/memory/: __init__.py  embedder.py  extractor.py  manager.py  models.py  routes.py  schemas.sql
backend/tests/: conftest.py
(+210 files in other folders)
