[project]
name = "jobagent-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["S101", "B008"]  # B008: Depends() in FastAPI signatures is correct DI pattern

[tool.ruff.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
